tests/scan/fixtures/validation/negative/clean_cargo_clean_logger_crate/src/lib.rs
//! A clean Rust crate: clean_logger_crate.

pub fn hello() -> &'static str { "hello" }
